--- a/public_html/index.html
+++ b/public_html/index.html
@@ -23,57 +23,70 @@
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
-    <body>
+    <body onload="getTime()">
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Trevor Timer!</h1>
-        <p>This is the Trevor Timer! Free web app to help you with your depression.</p>
-      </div>
-    </div>
 
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Total Time:</h2>
-          <p>Total time. </p>
+        <!-- Main jumbotron for a primary marketing message or call to action -->
+        <div class="jumbotron">
+            <div class="container">
+                <h1>Timer!</h1>
+                <p>This is the Timer! Free web app to help you with your depression.</p>
+                <h2 id="sessionStart">Time since session started: </h2>
+            </div>
         </div>
-        <div class="col-md-4">
-          <h2>Average Time:</h2>
-          <p>Avg Time. </p>
-       </div>
-        <div class="col-md-4">
-          <h2>Last Recorded Time:</h2>
-          <p>Last recorded time.</p>
-        </div>
-      </div>
 
-      <hr>
+        <div class="container">
+            <!-- Example row of columns -->
+            <div class="row">
+                <div class="col-md-4">
+                    <h2>Total Time:</h2>
+                    <p>Total time. </p>
+                </div>
+                <div class="col-md-4">
+                    <h2>Average Time:</h2>
+                    <p>Avg Time. </p>
+                </div>
+                <div class="col-md-4">
+                    <h2>Last Recorded Time:</h2>
+                    <p>Last recorded time.</p>
+                </div>
+                <div class="col-md-4">
+                    <h2>Current Time:</h2>
+                    <p id="curTime"></p>
+                </div>
+            </div>
 
-      <footer>
-        <p>&copy; Company 2015</p>
-      </footer>
-    </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.js"></script>
+            <hr>
+
+            <footer>
+                <p>&copy; Company 2015</p>
+            </footer>
+        </div> <!-- /container -->        
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.js"><\/script>')</script>
-
         <script src="js/vendor/bootstrap.min.js"></script>
 
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+            (function (b, o, i, l, e, r) {
+                b.GoogleAnalyticsObject = l;
+                b[l] || (b[l] =
+                        function () {
+                            (b[l].q = b[l].q || []).push(arguments)
+                        });
+                b[l].l = +new Date;
+                e = o.createElement(i);
+                r = o.getElementsByTagName(i)[0];
+                e.src = '//www.google-analytics.com/analytics.js';
+                r.parentNode.insertBefore(e, r)
+            }(window, document, 'script', 'ga'));
+            ga('create', 'UA-XXXXX-X', 'auto');
+            ga('send', 'pageview');
         </script>
     </body>
 </html>
